Simplify Stream code introduced after Java 11
* Use String.join(CharSequence, Iterable)
* Replace .collect(toList()) with .toList()