@@ -8,7 +8,6 @@ import scot.mygov.validation.ValidationResultsBuilder;
 import java.util.ArrayList;
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
 import static org.junit.Assert.assertTrue;
 
 public class AddressValidatorTest {
@@ -40,12 +39,9 @@ public class AddressValidatorTest {
                 .filter(address -> {
                     ValidationResultsBuilder resultsBuilder = new ValidationResultsBuilder();
                     AddressValidator.validate(address, "field", resultsBuilder);
-
-
                     return !resultsBuilder.build().getIssues().isEmpty();
                 })
-                .collect(toList());
-
+                .toList();
 
         // ASSERT
         Assert.assertEquals(rejected.size(), input.size());
